minor dark mode css fixes

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ footer {
 
 @media screen and (max-width: 768px) {
   body {
-    background: #ffffff;
+    background: #000000;
   }
   .ashwin {
     color: #ffffff;
