--- a/src/components/movieList/movieList.css
+++ b/src/components/movieList/movieList.css
@@ -9,7 +9,7 @@
 }
 
 .no-data p {
-  color: #333333;
+  color: #ffffff;
   font-size: 18px;
 }
 
@@ -17,4 +17,12 @@
 .movie-list-loading {
   text-align: center;
   margin: 80px 0;
+  color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  .no-data p,
+  .movie-list-loading {
+    color: #333333;
+  }
 }
